<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olá! Selecione o número de jogadores:" />
    
    <RadioGroup
        android:id="@+id/opcaoRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/doisRb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/dois" />

        <RadioButton
            android:id="@+id/tresRb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tr_s" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selecione a sua jogada (Pedra, Papel ou Tesoura):" />

    <LinearLayout
        android:id="@+id/linearImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/pedraBt"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/zero"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp" />

        <ImageButton
            android:id="@+id/papelBt"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/five"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp" />

        <ImageButton
            android:id="@+id/tesouraBt"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/two"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jogada_do_computador" />

    <ImageView
        android:id="@+id/jogadaComputadorUmIv"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <TextView
        android:id="@+id/jogadaComputadorDoisTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jogada_do_computador_2"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/jogadaComputadorDoisIv"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:visibility="visible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado" />

    <TextView
        android:id="@+id/resultadoTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>